implements dynamic controls: MAX, WHITE, ZOOM, ITER

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 
     <div class="controls">
       <form id="ctrl">
-        <input type="checkbox" class="checkbox" value="checked" name="invert-colors">Invert colors<br>
+      <div id="option-display">
+      </div>
+        <!--<input type="checkbox" class="checkbox" value="checked" name="invert-colors">Invert colors<br>-->
         <input type="submit" class="submit" value="Render" name="render">
       </form>
     </div>
