--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
       <form id="ctrl">
       <div id="option-display">
       </div>
-        <!--<input type="checkbox" class="checkbox" value="checked" name="invert-colors">Invert colors<br>-->
         <input type="submit" class="submit" value="Render" name="render">
       </form>
+      <div id="render"></div>
     </div>
 
     <div class="canvas-container">
