--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
       </div>
         <input type="submit" class="submit" value="Render" name="render">
       </form>
-      <div id="render"></div>
+      <div id="console-wrapper">
+        <div id="console"></div>
+      </div>
     </div>
 
     <div class="canvas-container">
