BROKEN. major refactor in progress

--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <title>Mandelbrot Set</title>
     <link rel="stylesheet" href="style.css"></link>
+    <script type="text/javascript" src="opt.js"></script>
+    <script type="text/javascript" src="canvas.js"></script>
+    <script type="text/javascript" src="plane.js"></script>
+    <script type="text/javascript" src="iter.js"></script>
+    <script type="text/javascript" src="math.js"></script>
+    <script type="text/javascript" src="util.js"></script>
     <script type="text/javascript" src="script.js"></script>
   </head>
   <body>
