initial refactor complete and stable for cartesian coords

--- a/index.html
+++ b/index.html
@@ -4,20 +4,22 @@
     <meta charset="UTF-8">
     <title>Mandelbrot Set</title>
     <link rel="stylesheet" href="style.css"></link>
+    <script type="text/javascript" src="math.js"></script>
+    <script type="text/javascript" src="util.js"></script>
     <script type="text/javascript" src="opt.js"></script>
     <script type="text/javascript" src="canvas.js"></script>
     <script type="text/javascript" src="plane.js"></script>
     <script type="text/javascript" src="iter.js"></script>
-    <script type="text/javascript" src="math.js"></script>
-    <script type="text/javascript" src="util.js"></script>
+    <script type="text/javascript" src="controls.js"></script>
     <script type="text/javascript" src="script.js"></script>
+    <script type="text/javascript" src="init.js"></script>
   </head>
   <body>
 
     <div class="controls">
       <form id="ctrl">
-      <div id="option-display">
-      </div>
+        <div id="option-display">
+        </div>
         <input type="submit" class="submit" value="Render" name="render">
       </form>
       <div id="console-wrapper">
