initial multithread rotation working. simplified algo

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Mandelbrot Set</title>
-    <link rel="stylesheet" href="style.css"></link>
+    <link rel="stylesheet" href="style.css" />
     <script type="text/javascript" src="math.js"></script>
     <script type="text/javascript" src="util.js"></script>
     <script type="text/javascript" src="opt.js"></script>
@@ -28,7 +28,7 @@
     </div>
 
     <div class="canvas-container">
-      <canvas height="600" width="600" ></cavnvas>
+      <canvas height="600" width="600" ></canvas>
     </div>
 
   </body>
