fixes rotation bound redraw, npm init

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script type="text/javascript" src="plane.js"></script>
     <script type="text/javascript" src="iter.js"></script>
     <script type="text/javascript" src="controls.js"></script>
-    <script type="text/javascript" src="script.js"></script>
+    <script type="text/javascript" src="app.js"></script>
     <script type="text/javascript" src="init.js"></script>
   </head>
   <body>
